--- a/src/app/components/admin/sidebar/sidebar.component.html
+++ b/src/app/components/admin/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
     <mat-sidenav #sidenav mode="side" opened class="example-sidenav1" fixedInViewport="true" fixedTopGap="0"
         fixedBottomGap="0">
 
-        <mat-grid-list cols="7" rowHeight="7%">
+        <mat-grid-list cols="7" rowHeight="8%">
             <mat-grid-tile colspan="2"><mat-icon color="accent" (click)="sidenav.close()" (click)="sidenav1.open()"
                     (click)="toggle()">menu</mat-icon></mat-grid-tile>
             <mat-grid-tile colspan="3"></mat-grid-tile>
@@ -30,45 +30,26 @@
                 <p class="opcion-text">foto perfil</p>
             </mat-grid-tile>
 
-            <mat-grid-tile colspan="7">
-                <p class="opcion-text">nombre usuario</p>
-            </mat-grid-tile>
-
-            <mat-grid-tile colspan="1" routerLink="/sidebar/buscar-piso"><mat-icon color="accent">place</mat-icon></mat-grid-tile>
-            <mat-grid-tile colspan="6" mat-align="start" routerLink="/sidebar/buscar-piso">
-                <p class="opcion-text">Buscar piso</p>
+            <mat-grid-tile colspan="1" routerLink="/admin/sidebar/contact-us-de-usuario"><mat-icon color="accent">place</mat-icon></mat-grid-tile>
+            <mat-grid-tile colspan="6" mat-align="start" routerLink="/admin/sidebar/contact-us-de-usuario">
+                <p class="opcion-text">Contact us de usuario</p>
             </mat-grid-tile>
 
             <mat-grid-tile colspan="1"></mat-grid-tile>
-            <mat-grid-tile colspan="1" routerLink="/sidebar/buscar-piso/lista"><mat-icon color="accent">home</mat-icon></mat-grid-tile>
-            <mat-grid-tile colspan="5" mat-align="start" routerLink="/sidebar/buscar-piso/lista">
-                <p class="opcion-text">Lista</p>
+            <mat-grid-tile colspan="1" routerLink="/admin/sidebar/denuncias-del-foro"><mat-icon color="accent">home</mat-icon></mat-grid-tile>
+            <mat-grid-tile colspan="5" mat-align="start" routerLink="/admin/sidebar/denuncias-del-foro">
+                <p class="opcion-text">Denuncias del foro</p>
             </mat-grid-tile>
 
             <mat-grid-tile colspan="1"></mat-grid-tile>
-            <mat-grid-tile colspan="1" routerLink="/sidebar/buscar-piso/mapa"><mat-icon color="accent">map</mat-icon></mat-grid-tile>
-            <mat-grid-tile colspan="5" mat-align="start" routerLink="/sidebar/buscar-piso/mapa">
-                <p class="opcion-text">Mapa</p>
+            <mat-grid-tile colspan="1" routerLink="/admin/sidebar/gestion-de-usuarios"><mat-icon color="accent">map</mat-icon></mat-grid-tile>
+            <mat-grid-tile colspan="5" mat-align="start" routerLink="/admin/sidebar/gestion-de-usuarios">
+                <p class="opcion-text">Gestión de usuarios</p>
             </mat-grid-tile>
 
             <mat-grid-tile colspan="1" routerLink="/sidebar/mapa"><mat-icon color="accent">flag</mat-icon></mat-grid-tile>
             <mat-grid-tile colspan="6" mat-align="left" routerLink="/sidebar/mapa">
-                <p class="opcion-text">Mapa</p>
-            </mat-grid-tile>
-
-            <mat-grid-tile colspan="1" routerLink="/sidebar/foro"><mat-icon color="accent">question_answer</mat-icon></mat-grid-tile>
-            <mat-grid-tile colspan="6" routerLink="/sidebar/foro">
-                <p class="opcion-text">Foro</p>
-            </mat-grid-tile>
-
-            <mat-grid-tile colspan="1" routerLink="/sidebar/faq"><mat-icon color="accent">question_mark</mat-icon></mat-grid-tile>
-            <mat-grid-tile colspan="6" routerLink="/sidebar/faq">
-                <p class="opcion-text">FAQ</p>
-            </mat-grid-tile>
-
-            <mat-grid-tile colspan="1" routerLink="/sidebar/contact-us"><mat-icon color="accent">phone_iphone</mat-icon></mat-grid-tile>
-            <mat-grid-tile colspan="6" routerLink="/sidebar/contact-us">
-                <p class="opcion-text">Contact us</p>
+                <p class="opcion-text">Estadísticas</p>
             </mat-grid-tile>
 
             <mat-grid-tile colspan="7"></mat-grid-tile>
